--- a/src/main/resources/changelog/db.changelog-master.yml
+++ b/src/main/resources/changelog/db.changelog-master.yml
@@ -83,3 +83,21 @@ databaseChangeLog:
       changes:
         - sqlFile:
             path: changelog/ddl/changelog-0014.sql
+  - changeSet:
+      id: create-tables-15
+      author: vanmanh
+      changes:
+        - sqlFile:
+            path: changelog/ddl/changelog-0015.sql
+  - changeSet:
+      id: create-tables-16
+      author: vanmanh
+      changes:
+        - sqlFile:
+            path: changelog/ddl/changelog-0016.sql
+  - changeSet:
+      id: create-tables-17
+      author: vanmanh
+      changes:
+        - sqlFile:
+            path: changelog/ddl/changelog-0017.sql
