--- a/pom.xml
+++ b/pom.xml
@@ -169,6 +169,18 @@
 			<version>8.5.10</version>
 		</dependency>
 
+		<!-- Quartz -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-quartz</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
+
 
 	</dependencies>
 
