feat: implement ZaloPay ver3

--- a/src/main/resources/changelog/db.changelog-master.yml
+++ b/src/main/resources/changelog/db.changelog-master.yml
@@ -107,3 +107,9 @@ databaseChangeLog:
       changes:
         - sqlFile:
             path: changelog/ddl/changelog-0018.sql
+  - changeSet:
+      id: create-tables-19
+      author: vanmanh
+      changes:
+        - sqlFile:
+            path: changelog/ddl/changelog-0019.sql
