--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,15 +28,34 @@ services:
     networks:
       - app-network
 
+  # 🪣 MinIO object storage
+  minio:
+    image: minio/minio:latest
+    container_name: minio
+    restart: always
+    environment:
+      - MINIO_ROOT_USER=${MINIO_ACCESS_KEY}
+      - MINIO_ROOT_PASSWORD=${MINIO_SECRET_KEY}
+    command: server /data --console-address ":9001"
+    ports:
+      - "9000:9000"  # API endpoint
+      - "9001:9001"  # Web console
+    volumes:
+      - minio_data:/data
+    networks:
+      - app-network
+
+  # 🚀 Ứng dụng chính
   application:
     image: manh2003ptc/health-management
     container_name: application
     restart: always
-    ports:
-      - "8080:8080"
     depends_on:
       - postgres
       - redis
+      - minio
+    ports:
+      - "8080:8080"
     env_file:
       - .env
     networks:
@@ -45,6 +64,7 @@ services:
 volumes:
   postgres_data:
   redis_data:
+  minio_data:
 
 networks:
   app-network:
